// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Image Component > props.fit is equal to contain 1`] = `
<img
  alt=""
  class="t-image t-image--fit-contain t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.fit is equal to cover 1`] = `
<img
  alt=""
  class="t-image t-image--fit-cover t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.fit is equal to fill 1`] = `
<img
  alt=""
  class="t-image t-image--fit-fill t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.fit is equal to none 1`] = `
<img
  alt=""
  class="t-image t-image--fit-none t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.fit is equal to scale-down 1`] = `
<img
  alt=""
  class="t-image t-image--fit-scale-down t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.loading works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Image Component > props.overlayContent works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="image"
          >
            <path
              d="M3 21H20L9 10L3 16V21Z"
              fill="transparent"
              id="fill1"
            />
            <circle
              cx="15.75"
              cy="8.25"
              fill="transparent"
              id="fill2"
              r="2"
            />
            <path
              d="M3 16V3H21V21H20M3 16V21H20M3 16L9 10L20 21"
              id="stroke1"
              stroke="currentColor"
              stroke-width="2"
            />
            <circle
              cx="15.75"
              cy="8.25"
              id="stroke2"
              r="2"
              stroke="currentColor"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <div
    class="t-image__overlay-content"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
</div>
`;

exports[`Image Component > props.placeholder works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <div
    class="t-image__placeholder"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="image"
          >
            <path
              d="M3 21H20L9 10L3 16V21Z"
              fill="transparent"
              id="fill1"
            />
            <circle
              cx="15.75"
              cy="8.25"
              fill="transparent"
              id="fill2"
              r="2"
            />
            <path
              d="M3 16V3H21V21H20M3 16V21H20M3 16L9 10L20 21"
              id="stroke1"
              stroke="currentColor"
              stroke-width="2"
            />
            <circle
              cx="15.75"
              cy="8.25"
              id="stroke2"
              r="2"
              stroke="currentColor"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Image Component > slots.loading works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Image Component > slots.overlay-content works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="image"
          >
            <path
              d="M3 21H20L9 10L3 16V21Z"
              fill="transparent"
              id="fill1"
            />
            <circle
              cx="15.75"
              cy="8.25"
              fill="transparent"
              id="fill2"
              r="2"
            />
            <path
              d="M3 16V3H21V21H20M3 16V21H20M3 16L9 10L20 21"
              id="stroke1"
              stroke="currentColor"
              stroke-width="2"
            />
            <circle
              cx="15.75"
              cy="8.25"
              id="stroke2"
              r="2"
              stroke="currentColor"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <div
    class="t-image__overlay-content"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
</div>
`;

exports[`Image Component > slots.overlayContent works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="image"
          >
            <path
              d="M3 21H20L9 10L3 16V21Z"
              fill="transparent"
              id="fill1"
            />
            <circle
              cx="15.75"
              cy="8.25"
              fill="transparent"
              id="fill2"
              r="2"
            />
            <path
              d="M3 16V3H21V21H20M3 16V21H20M3 16L9 10L20 21"
              id="stroke1"
              stroke="currentColor"
              stroke-width="2"
            />
            <circle
              cx="15.75"
              cy="8.25"
              id="stroke2"
              r="2"
              stroke="currentColor"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <div
    class="t-image__overlay-content"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
</div>
`;

exports[`Image Component > slots.placeholder works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <div
    class="t-image__placeholder"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="image"
          >
            <path
              d="M3 21H20L9 10L3 16V21Z"
              fill="transparent"
              id="fill1"
            />
            <circle
              cx="15.75"
              cy="8.25"
              fill="transparent"
              id="fill2"
              r="2"
            />
            <path
              d="M3 16V3H21V21H20M3 16V21H20M3 16L9 10L20 21"
              id="stroke1"
              stroke="currentColor"
              stroke-width="2"
            />
            <circle
              cx="15.75"
              cy="8.25"
              id="stroke2"
              r="2"
              stroke="currentColor"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <!---->
</div>
`;
